--- a/index.html
+++ b/index.html
@@ -17,12 +17,10 @@
         </div>
         <div class="field has-addons navbar-item navbar-end">
             <div class="control">
-                <input class="input" type="text" placeholder="Location">
+                <input class="input" type="text" id="input" placeholder="Location">
             </div>
             <div class="control">
-                <a class="button is-info">
-                    Search
-                </a>
+                <input class="button is-info" id="button" type="submit" value="Search"></input>
             </div>
         </div>
     </section>
@@ -97,7 +95,8 @@
         </div>
     </section>
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./assets/js/script.js"></script>
 </body>
 
 </html>
